append rotate from move and color tanks

--- a/TankGame/TankGame.vcxproj.filters
+++ b/TankGame/TankGame.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="Storm.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="ETank.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
