--- a/TankGame/TankGame.vcxproj
+++ b/TankGame/TankGame.vcxproj
@@ -143,6 +143,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Bullet.h" />
+    <ClInclude Include="ETank.h" />
     <ClInclude Include="Rock.h" />
     <ClInclude Include="Storm.h" />
     <ClInclude Include="Tank.h" />
