--- a/TankGame/TankGame.vcxproj.filters
+++ b/TankGame/TankGame.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClInclude Include="ETank.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="Map.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
